# pcaptoparquet

./: .gitignore  Makefile  README.md  pcaptoparquet_cli.py  pyproject.toml  schema.md
pcaptoparquet/: __init__.py  e2e_cli.py  e2e_config.py  e2e_packet.py  e2e_parallel.py  e2e_pcap.py  e2e_quic.py  e2e_tunel.py  e2e_tunnel.py
test_cli/: test_cli.py
tests/: __init__.py  test_module.py  test_unit.py  test_utils.py
tests/callbacks/: 00_callback_calculate_e2e.py  01_callback_filter_icmp.py  02_callback_count_pings.py
tests/config/: twamplight.cfg  volte.cfg
tests/config/modules/: e2e_diameter.py  e2e_rtcp.py  e2e_rtp.py  e2e_sip.py  e2e_stun.py  e2e_twamplight.py
tests/data/00_functional/99_others/: example.pcap  example_cfg.pcap  example_part_02.pcapng
